# kata

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/sn60-model-relay/: Dockerfile
docs/: SCORING.md  benchmark-evaluation.md  github-automation.md  milestones.md  submissions.md  system-workflow.md  workflow.md
kata/: __init__.py  agent_bundle.py  baseline.py  challenge.py  cli.py  frontier.py  generator.py  lane_state.py  models.py  screening.py  seed_agent.py  sn60_model_relay.py  submissions.py
kata/core/: __init__.py  challenge.py  round.py
kata/evaluators/: sn60_bitsec.py
kata/interfaces/: cli.py
kata/plugins/: contract.py
kata/promotion/: king.py
kata/promotion_system/: __init__.py  king.py
kata/screening/: engine.py  similarity.py
kata/screening_system/: benchmark_replay.py  engine.py  llm_review.py  mutation_canary.py  rules.py
kata/state/: artifacts.py  lanes.py  progress.py
kata/submission_system/: __init__.py  layout.py  validation.py  workflow.py
kata/submissions/: __init__.py  bundle.py  layout.py  models.py  rendering.py  validation.py  workflow.py
public-results/: current.json
tests/: test_characterization_sn60.py  test_cli.py  test_frontier.py  test_lane_state.py  test_llm_review.py  test_mutation_canary.py  test_promotion_system.py  test_scoring.py  test_screening.py  test_sn60_bitsec.py  test_sn60_challenge.py  test_sn60_model_relay.py  test_sn60_plugin.py  test_static_screen_dispatch.py  test_submission_system.py  test_submissions.py  test_subnet_plugin_registry.py
(+41 files in other folders)
