[project]
name = "kata"
version = "0.2.0"
description = "Objective coding-agent competition for repo-specific Gittensor repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Kata maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
kata = "kata.cli:main"

# Subnet plugins are discovered via the ``kata.subnets`` entry-point group: each subnet package
# (its own repo, e.g. kata-sn60, kata-sn22) declares one entry pointing at its SubnetPlugin
# singleton, and the core loads every installed one with no code change. See
# kata/plugins/discovery.py. kata itself declares no subnet.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["kings", "runs", "submissions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
